# SolarSystemSim

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: CelestialBody.hpp  SimulationConfig.hpp  Vec2.hpp  Window.hpp
src/: CelestialBody.cpp  Vec2.cpp  Window.cpp  application.cpp
